--- a/research/index.html
+++ b/research/index.html
@@ -9,6 +9,7 @@ title: Easton R. White | Research
 <a href="#MPAs">Marine protected areas in a changing world </a><br />
 <a href="#SES">Socio-ecological systems </a><br />
 <a href="#monitoring">Improving monitoring programs </a><br />
+<a href="#management_variability">Variability in ecological management outcomes </a><br />
 <a href="#cocos">Long-term trends of marine predators </a><br />
 <a href="#SoTL">Scholarship of Teaching and Learning</a><br />
 <a href="#metapop">Metapopulation dynamics of small mammals </a></p>
@@ -49,12 +50,18 @@ title: Easton R. White | Research
 <p>Dr. Steven Heard (University of New Brunswick), Dr. Auriel Fournier (Mississippi State University), and I recently published an article in <a href="https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/cobi.13371" target="_blank" rel="noopener noreferrer">Conservation Biology that focused on the question of sampling bias in monitoring programs.</a>. We found that bias in the sites chosen for monitoring can lead to overestimates in the long-term population decline estimates.
 
 
-<p><a name="variability"></a></p>
-<h2>Environmental variability and population dynamics</h2>
-<p>Ecological systems are dynamic with different forms of environmental variability acting on them. Of course, the ecology and evolution of organisms in these systems are shaped by these various forms of environmental variability. I combined a mathematical model with field data to better understand a population of lemon sharks in the Bahamas. I found that a simple model could predict the long-term mean of the population size well, but it did a poor job at predicting the variance in population size <a href="https://biologydirect.biomedcentral.com/articles/10.1186/1745-6150-9-23" target="_blank" rel="noopener noreferrer">(White et al. 2014)</a>. It turned out that much of the variance in population size could be explained by a few unusual years in terms of the environment.</p>
+<p><a name="management_variability"></a></p>
+<h2>Variability in ecological management outcomes</h2>
 
+From invasive species to fisheries, managers are always trying to determine which management strategies are most effective. However, this is often a difficult challenge. If a particular management strategy fails, was it because it was a bad strategy or because of bad luck? It is difficult to disentangle management effectiveness from luck in the field because we often only have a single observation of the system. 
 
+We have built a series of mathematical models (specifically a set of stochastic discrete-time equations that include stage-structure) to show there can be large variability in management outcomes. We studied this in the context of controlling the spread of an invasive species. We tested these ideas using laboratory experiments with the flour beetle (Tribolium spp.). The experiments matched up with predictions from the mathematical models. Although the laboratory experiments were highly controlled, there was still large variability in management outcomes (see movie of time series below). This highlights the importance of carefully evaluating management successes and failures in nature. We are now building on this work to study how to make invasive species management both effective and also cost effective.
 	
+ <figure>
+  <img src="/images/BeetleControl_timeseries.gif" alt="min_time" align="bottom" style="width:70%">
+  <figcaption>Animation of number of beetles in each patch with each frame representing one generation over the course of the experiment. Each subplot is a different combination of dispersal time (hours) and harvesting rate.</figcaption>
+</figure> 
+
 <p><a name="cocos"></a></p>
 <h2>Long-term population trends of sharks and rays</h2>
 <p>Worldwide, many species of sharks and rays have seen large declines in population size. Approximently, 25% of all chondrichthyan (shark, ray, chimaeras) species around the world are threatened according to IUCN criteria (Dulvy 2014). These species are threatened from overfishing, habitat degradation and pollution. Sharks and rays act as predators and drive population dynamics of species lower in the food chain. (Heithaus et al. 2010). In response to declining populations of sharks and rays, many countries have instituted marine protected areas (MPA). An MPA is a conservation and management tool that is designed to let species recover by providing them with an area of refuge, free from fishing. However, it is not clear if MPAs are effective for large mobile predators, like sharks and rays.</p>
@@ -65,7 +72,7 @@ title: Easton R. White | Research
 </figure> 
 
 <h4>Shark nurseries in the Bahamas</h4>
-<p style="text-align:left;">In a related project, I studied long-term trends of lemon sharks found in the Bahamas. We developed a series of mathematical models to better understand the population of juvenile lemon sharks found in the lagoons of <a href="http://www.biminisharklab.com/" target="_blank" rel="noopener noreferrer">Bimini</a>. We found that the variance in population size of juvenile sharks, is mostly driven by the environment. Therefore, predators and food resources may not be as important factors in driving population dynamics as once thought. The paper can be found here: <a href="http://www.biologydirect.com/content/9/1/23" target="_blank" rel="noopener noreferrer">Modeling the population dynamics of lemon sharks.</a></p>
+<p style="text-align:left;">In a related project, I studied long-term trends of lemon sharks found in the Bahamas. We developed a series of mathematical models to better understand the population of juvenile lemon sharks found in the lagoons of <a href="http://www.biminisharklab.com/" target="_blank" rel="noopener noreferrer">Bimini</a>. We found that the variance in population size of juvenile sharks, is mostly driven by the environment. Therefore, predators and food resources may not be as important factors in driving population dynamics as once thought. I combined a mathematical model with field data to better understand a population of lemon sharks in the Bahamas. I found that a simple model could predict the long-term mean of the population size well, but it did a poor job at predicting the variance in population size <a href="https://biologydirect.biomedcentral.com/articles/10.1186/1745-6150-9-23" target="_blank" rel="noopener noreferrer">(White et al. 2014)</a>. It turned out that much of the variance in population size could be explained by a few unusual years in terms of the environment.</p>
 </div>
 
 
