--- a/teaching/index.html
+++ b/teaching/index.html
@@ -7,6 +7,8 @@ title: Easton R. White | Teaching
 
 <p>I view teaching as a highly scientific enterprise. I form hypotheses about teaching, conduct experiments in the classroom to test these hypotheses, examine the results, and adjust my teaching approach accordingly. In my teaching, I use a mix of active learning techniques (e.g. flipped classes, think-pair-share, Jigsaws) in line with evidence-based pedagogy. I believe it is important for students to work on important, real-life case studies throughout the curriculum. You can read more about my research into teaching in the <a href="https://eastonwhite.wordpress.com/current-research/#SoTL">Scholarship of Teaching and Learning section of my research page. </a> </p>
 
+<img src="/images/easton_teaching.png" alt="learning_glass" align="right" style="height:300px;">
+
 
 <p>I am currently the instructor for Foundations of Quantitative Reasoning, a PhD course at the University of Vermont. The class is a mix of ecology, evolution, quantitative skills, and programming in R. All the materials for the course are freely available at: <a href="https://eastonwhite.github.io/QuantReasoning/" rel="nofollow">https://eastonwhite.github.io/QuantReasoning/</a></p>
 <p>I am also an instructor for the group <a href="http://software-carpentry.org/" target="_blank" rel="noopener">Software Carpentry</a>. I teach 2-3 workshops a year designed to help scientists be more productive using various software skills including Git/version control, R statistical software, and command line.</p>
