--- a/cv/index.html
+++ b/cv/index.html
@@ -26,6 +26,7 @@ title: Easton R. White | CV
 <hr size="2" width="100%" align="left">
  
 <h2><strong>Easton R. White</strong></h2>
+<p>Research Associate<br />
 <p>Department of Biology<br />
 University of Vermont<br />
 <a href="mailto:Easton.White@uvm.edu">Easton.White@uvm.edu</a></br>
@@ -34,35 +35,27 @@ Twitter <a href="https://twitter.com/eastonrwhite" rel="noopener">@eastonrwhite<
 Github: <a href="https://github.com/eastonwhite" rel="noopener">eastonwhite</a></td>
 
 
-</table>
-<p><strong>Research Associate</strong> University of Vermont</p>
-<ul>
-<li>Developing and teaching PhD program’s core course, Foundations of Quantitative Reasoning</li>
-<li>Researching effectiveness of team-based learning in the classroom</li>
-<li>Studying sea star wasting disease and the effectiveness of marine protected areas</li>
-<li> Studying socio-ecological questions in the context of small-scale Malagasy fisheries
-</ul>
 <p><a name="education"></a><br />
 <strong>EDUCATION</strong></p>
 <hr size="2" width="100%" align="left">
 <table>
 <tbody>
 <tr>
+<td width="86">2018</td>
 <td width="392"><span style="color:#000000;"><strong>University of California Davis</strong></span><br />
 <span style="color:#000000;"> PhD in Population Biology<br />
 </span></td>
-<td width="86">2018</td>
 </tr>
 <tr>
+<td width="86">2013</td>
 <td width="392"><span style="color:#000000;"><strong>Arizona State University</strong></span><br />
 <span style="color:#000000;"> Bachelor of Science in Biology</span><br />
 <span style="color:#000000;"> Minor Mathematics</span></td>
-<td width="86">2013</td>
 </tr>
 <tr>
+<td width="86">2010</td>
 <td width="392"><span style="color:#000000;"><strong>Scottsdale Community College</strong></span><br />
 <span style="color:#000000;"> Associate in Science</span></td>
-<td width="86">2010</td>
 </tr>
 </tbody>
 </table>
