added PNAS paper and altmetric information

--- a/publications/index.html
+++ b/publications/index.html
@@ -7,13 +7,16 @@ title: Easton R. White | Publications
 
 <p><a href="http://scholar.google.com/citations?user=A_g_ydoAAAAJ&amp;hl=en" rel="noopener">Google Scholar profile</a> <a href="https://www.researchgate.net/profile/Easton_White" rel="noopener">ResearchGate Profile</a> *Indicates undergraduate or graduate student</p>
 <h3><strong><em>In the pipeline…</em></strong></h3>
-<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
-<p><strong>White, Easton R., *</strong>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. In Revision.</p>
-<p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. 2018. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. PeerJ Preprints 6:e27435v1.</p>
-<p><strong>White, Easton R</strong> and Alan Hastings. 2018. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> PeerJ Preprints 6:e27235v1.</p>
+<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. <em>bioRxiv</em>.</p>
+<p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. <em>PeerJ Preprints</em> 6:e27435v1.</p>
+<p><strong>White, Easton R</strong> and Alan Hastings. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> <em>PeerJ Preprints</em> 6:e27235v1.</p>
 <h3><strong><em>Published</em></strong></h3>
+<p>[11] <strong>White, Easton R., *</strong>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
+
 <p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., <strong>Easton R. White</strong>, Thorsten Wiegand, Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. </em><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577">A low cost approach to estimate demographic rates using inverse modelling.</a> In press at <em>Biological Conservation.</em></p>
-<p>[9] Fournier, Auriel,<strong> Easton R. White,</strong> and Stephen Heard. 2019. <a href="https://onlinelibrary.wiley.com/doi/10.1111/cobi.13371" target="_blank" rel="noopener">Site-selection bias can drive apparent population declines in long-term studies.</a>  Accepted at <em>Conservation Biology.</em></p>
+<div data-badge-popover="right" data-badge-type="2" data-doi="10.1016/j.biocon.2019.07.011" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>
+
+<p>[9] Fournier, Auriel,<strong> Easton R. White,</strong> and Stephen Heard. 2019. <a href="https://onlinelibrary.wiley.com/doi/10.1111/cobi.13371" target="_blank" rel="noopener">Site-selection bias can drive apparent population declines in long-term studies.</a> <em>Conservation Biology.</em></p>
 
 <div data-badge-popover="right" data-badge-type="2" data-doi="10.1111/cobi.13371" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>
 
@@ -33,12 +36,16 @@ title: Easton R. White | Publications
 
 <p>[4] Kessel S. T., Chapman D. D., Franks B. R., Gedamke T., Gruber S. H., Newman J. M., <strong>White E. R.</strong> and Perkins R. G. 2014. <a href="http://www.int-res.com/prepress/m10966.html">Predictable temperature regulated residency, movement and migration in a large, highly-mobile marine predator.</a> <em>Marine Ecology Progress Series</em> 514</p>
 
- <div data-badge-popover="right" data-badge-type="2" data-doi="0.3354/meps10966" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>	
+ <div data-badge-popover="right" data-badge-type="2" data-doi="10.3354/meps10966" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>	
 
 
 <p>[3] Robinson, James P.W., <strong>Easton R. White</strong>, Logan D. Wiwchar, Danielle C. Claar, Justin P. Suraci, Julia K. Baum. 2014. <a href="http://www.sciencedirect.com/science/article/pii/S0308597X14000840">The limitations of diversity metrics in directing marine global marine conservation.</a> <em>Marine Policy </em>48:123-125</p>
 
+ <div data-badge-popover="right" data-badge-type="2" data-doi="10.1016/j.marpol.2014.03.012" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>	
+
 <p>[2] Gerber, Leah R. and <strong>Easton R. White</strong>. 2014. <a href="http://onlinelibrary.wiley.com/doi/10.1111/1365-2664.12177/full">Two-sex matrix models in assessing population viability: when do male dynamics matter?</a> <em>Journal of Applied Ecology 51(1): 270-278</em></p>
+
+ <div data-badge-popover="right" data-badge-type="2" data-doi="10.1111/1365-2664.12177" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>	
 
 <p>[1] Senko, Jesse, <strong>Easton R. White, </strong>Sellina S. Heppell, and Leah R. Gerber. 2014. <a href="http://onlinelibrary.wiley.com/doi/10.1111/acv.12051/full">A comparison of fishery management strategies for mitigating bycatch of vulnerable marine megafauna species</a>. <em>Animal Conservation </em>17(1): 5-18</p>	
 
