--- a/publications/index.html
+++ b/publications/index.html
@@ -11,9 +11,9 @@ title: Easton R. White | Publications
 <p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. <em>PeerJ Preprints</em> 6:e27435v1.</p>
 <p><strong>White, Easton R</strong> and Alan Hastings. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> <em>PeerJ Preprints</em> 6:e27235v1.</p>
 <h3><strong><em>Published</em></strong></h3>
-<p>[11] <strong>White, Easton R., *</strong>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
+<p>[11] <strong>White, Easton R.,</strong><sup>*</sup>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
 
-<p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., <strong>Easton R. White</strong>, Thorsten Wiegand, Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. </em><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577">A low cost approach to estimate demographic rates using inverse modelling.</a> In press at <em>Biological Conservation.</em></p>
+<p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., Thorsten Wiegand, <strong>Easton R. White</strong>, Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. </em><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577">A low cost approach to estimate demographic rates using inverse modelling.</a> In press at <em>Biological Conservation.</em></p>
 <div data-badge-popover="right" data-badge-type="2" data-doi="10.1016/j.biocon.2019.07.011" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>
 
 <p>[9] Fournier, Auriel,<strong> Easton R. White,</strong> and Stephen Heard. 2019. <a href="https://onlinelibrary.wiley.com/doi/10.1111/cobi.13371" target="_blank" rel="noopener">Site-selection bias can drive apparent population declines in long-term studies.</a> <em>Conservation Biology.</em></p>
