updated PNAS paper

--- a/cv/index.html
+++ b/cv/index.html
@@ -99,12 +99,13 @@ Github: <a href="https://github.com/eastonwhite" rel="noopener">eastonwhite</a><
  </p>*Indicates undergraduate or graduate student</p>
 <p><strong><em>In the pipeline…</em></strong></p>
 
-<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
-<p><strong>White, Easton R., *</strong>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. In Revision.</p>
-<p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. 2018. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. PeerJ Preprints 6:e27435v1.</p>
-<p><strong>White, Easton R</strong> and Alan Hastings. 2018. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> PeerJ Preprints 6:e27235v1.</p>
+<p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
+<p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. PeerJ Preprints 6:e27435v1.</p>
+<p><strong>White, Easton R</strong> and Alan Hastings. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> PeerJ Preprints 6:e27235v1.</p>
+
 <p><strong><em>Published</em></strong></p>
-<p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., <strong>Easton R. White</strong>, Thorsten Wiegand, Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. A low cost approach to estimate demographic rates using inverse modelling. Accepted at <em>Biological Conservation.</em></p>
+<p>[11] <strong>White, Easton R.,</strong><sup>*</sup>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
+<p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., Thorsten Wiegand, <strong>Easton R. White</strong>,Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. A low cost approach to estimate demographic rates using inverse modelling. Accepted at <em>Biological Conservation.</em></p>
 <p>[9] Fournier, Auriel,<strong> Easton R. White,</strong> and Stephen Heard. 2019. <a href="https://onlinelibrary.wiley.com/doi/10.1111/cobi.13371" target="_blank" rel="noopener">Site-selection bias can drive apparent population declines in long-term studies.</a>  Accepted at <em>Conservation Biology.</em></p>
 <p>[8]<strong> White, Easton R. </strong>2019. <a href="https://academic.oup.com/bioscience/advance-article/doi/10.1093/biosci/biy144/5195956">Minimum time required to detect population trends: the need for long-term monitoring programs</a>. <em>Bioscience. </em>Selected as <strong>Editors’ Choice</strong> article.</p>
 <p>[7] <strong>White, Easton R.</strong> and Andrew T. Smith. 2018. <a href="https://esajournals.onlinelibrary.wiley.com/doi/10.1002/ecy.2546">The role of spatial structure in the collapse of regional metapopulations</a>. <em>Ecology. </em></p>
