--- a/publications/index.html
+++ b/publications/index.html
@@ -7,9 +7,13 @@ title: Easton R. White | Publications
 
 <p><a href="http://scholar.google.com/citations?user=A_g_ydoAAAAJ&amp;hl=en" rel="noopener">Google Scholar profile</a> <a href="https://www.researchgate.net/profile/Easton_White" rel="noopener">ResearchGate Profile</a> *Indicates undergraduate or graduate student</p>
 <h3><strong><em>In the pipeline…</em></strong></h3>
+<p><strong>White, Easton R.</strong>and Christie A. Bahlai. <a href="https://ecoevorxiv.org/cz5va/">Experimenting with the past to improve environmental monitoring programs</a>. <em>EcoEvoRxiv</em>.</p>
+
 <p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. <em>bioRxiv</em>.</p>
 <p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. <em>PeerJ Preprints</em> 6:e27435v1.</p>
 <p><strong>White, Easton R</strong> and Alan Hastings. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> <em>PeerJ Preprints</em> 6:e27235v1.</p>
+
+
 <h3><strong><em>Published</em></strong></h3>
 <p>[11] <strong>White, Easton R.,</strong><sup>*</sup>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
 
