--- a/cv/index.html
+++ b/cv/index.html
@@ -98,7 +98,7 @@ Github: <a href="https://github.com/eastonwhite" rel="noopener">eastonwhite</a><
 
  </p>*Indicates undergraduate or graduate student</p>
 <p><strong><em>In the pipeline…</em></strong></p>
-
+<p><strong>White, Easton R.</strong>and Christie A. Bahlai. <a href="https://ecoevorxiv.org/cz5va/">Experimenting with the past to improve environmental monitoring programs</a>. <em>EcoEvoRxiv</em>.</p>
 <p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
 <p><strong>White, Easton R., </strong>Kalle Parvinen, and Ulf Dieckmann. <a href="https://doi.org/10.7287/peerj.preprints.27435v1">Environmental variability and phenology evolution: impacts of climate change and spring onset on reproductive timing in a small mammal</a>. PeerJ Preprints 6:e27435v1.</p>
 <p><strong>White, Easton R</strong> and Alan Hastings. <a href="https://peerj.com/preprints/27235/">Seasonality in ecology: Progress and prospects in theory.</a> PeerJ Preprints 6:e27235v1.</p>
