added icons to pubs

--- a/publications/index.html
+++ b/publications/index.html
@@ -17,8 +17,10 @@ title: Easton R. White | Publications
 <h3><strong><em>Published</em></strong></h3>
 <p>[11] <strong>White, Easton R.,</strong><sup>*</sup>Kyle Cox, Brett Melbourne, and Alan Hastings. Ecological management depends strongly on stochasticity: an experimental test. Accepted at <em>Proceedings of the National Academy of Sciences</em></p>
 
+<a href=https://github.com/eastonwhite/species-management-variability><img src=icon_git.png style=height:30px title=Github alt=Github Link></a>
+
 <p>[10] <sup>*</sup>Rodríguez-Caro, Roberto C., Thorsten Wiegand, <strong>Easton R. White</strong>, Ana Sanz-Aguilar, Andrés Giménez, Eva Graciá, and José D. Anadón. </em><a href="https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577">A low cost approach to estimate demographic rates using inverse modelling.</a> In press at <em>Biological Conservation.</em></p>
-<div data-badge-popover="right" data-badge-type="2" data-doi="10.1016/j.biocon.2019.07.011" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>
+<div data-badge-popover="right" data-badge-type="2" data-doi="10.1016/j.biocon.2019.07.011" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div> <a href=https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577><img src=../icons/2019_Rodriquez-Caro_BioCon.png style=height:30px title=journal alt=PDF></a> <a href=https://eastonwhite.github.io/publications/2019_Rodriquez-Caro_BioCon.pdf><img src=../icons/pdf_logo.png style=height:30px title=PDF alt=PDF></a>
 
 <p>[9] Fournier, Auriel,<strong> Easton R. White,</strong> and Stephen Heard. 2019. <a href="https://onlinelibrary.wiley.com/doi/10.1111/cobi.13371" target="_blank" rel="noopener">Site-selection bias can drive apparent population declines in long-term studies.</a> <em>Conservation Biology.</em></p>
 
