added bioscience link

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ I am a quantitative ecologist who uses mathematical and statistical tools, coupl
 </div>
 
 <br /> 
+
+You can learn more about my work on species monitoring in a recent <a href="http://bioscience-talks.aibs.org/saving-species-with-better-monitoring">interview with the journal <i>BioScience</i>.</a>
+
+<br /> 
 <br /> 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
