added co-author links and preprint

--- a/research/index.html
+++ b/research/index.html
@@ -47,9 +47,14 @@ title: Easton R. White | Research
 
 <p>In a recent manuscript at <em>Bioscience</em> (<a href="https://academic.oup.com/bioscience/advance-article/doi/10.1093/biosci/biy144/5195956" target="_blank" rel="noopener noreferrer">available here</a>), I determined the minimum number of years required to be confident (i.e. have enough statistical power) in a population trend. Using simulations and empirical data from 822 populations, I estimated that 15.9 years on average were required. There was, however, tremendous variation between populations, casting doubt on simple rules of thumb. In a <a href="http://bioscienceaibs.libsyn.com/saving-species-with-better-monitoring" target="_blank" rel="noopener noreferrer">BioScience podcast</a>, I discuss this work and population monitoring in general.</p>
 
-<p>Dr. Steven Heard (University of New Brunswick), Dr. Auriel Fournier (Mississippi State University), and I recently published an article in <a href="https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/cobi.13371" target="_blank" rel="noopener noreferrer">Conservation Biology that focused on the question of sampling bias in monitoring programs.</a>. We found that bias in the sites chosen for monitoring can lead to overestimates in the long-term population decline estimates.
+<p><a href="http://www2.unb.ca/~sheard/" target="_blank" rel="noopener noreferrer">Dr. Stephen Heard</a> (University of New Brunswick), <a href="http://aurielfournier.github.io/" target="_blank" rel="noopener noreferrer">Dr. Auriel Fournier</a> (Forbes Biological Station), and I recently published an article in <a href="https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/cobi.13371" target="_blank" rel="noopener noreferrer">Conservation Biology that focused on the question of sampling bias in monitoring programs.</a>. We found that bias in the sites chosen for monitoring can lead to overestimates in the long-term population decline estimates.
 
 
+	
+
+<p>In a <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">recent preprint</a>, <a href="https://www.kent.edu/biology/christie-bahlai" target="_blank" rel="noopener noreferrer">Dr. Christie Bahlai</a> and I examine the various tools available for thinking about improving species monitoring programs. We emphasize the idea of conducting "experiments" with past monitoring programs in order to improve them and design new ones.</p>  
+	
+	
 <p><a name="management_variability"></a></p>
 <h2>Variability in ecological management outcomes</h2>
 
