updated altmetric badge

--- a/publications/index.html
+++ b/publications/index.html
@@ -27,7 +27,7 @@ title: Easton R. White | Publications
 
 <div data-badge-popover="right" data-badge-type="2" data-doi="10.1111/cobi.13371" data-hide-no-mentions="true" class="altmetric-embed" align="left"></div>
 
-<p>[8]<strong> White, Easton R. </strong>2019. <a href="https://eastonwhite.github.io/publications/2019_White_minimum_time_series_population_trend.pdf">Minimum time required to detect population trends: the need for long-term monitoring programs</a>. <em>Bioscience. </em>Selected as <strong>Editors’ Choice</strong> article. <div data-badge-popover="right" data-badge-type="2" data-doi="10.1093/biosci/biy144" data-hide-no-mentions="true" class="altmetric-embed"></div> </p>
+<p>[8]<strong> White, Easton R. </strong>2019. <a href="https://eastonwhite.github.io/publications/2019_White_minimum_time_series_population_trend.pdf">Minimum time required to detect population trends: the need for long-term monitoring programs</a>. <em>Bioscience. </em>Selected as <strong>Editors’ Choice</strong> article. <a href=https://www.sciencedirect.com/science/article/abs/pii/S0006320718310577><img src=../icons/2019_Rodriquez-Caro_BioCon.png style=height:30px title=journal alt=PDF></a> <a href=https://eastonwhite.github.io/publications/2019_Rodriquez-Caro_BioCon.pdf><img src=../icons/pdf_logo.png style=height:30px title=PDF alt=PDF></a> <div data-badge-popover="right" data-badge-type="4" data-doi="10.1093/biosci/biy144" data-hide-no-mentions="true" class="altmetric-embed"></div>
 
 <p>[7] <strong>White, Easton R.</strong> and Andrew T. Smith. 2018. <a href="https://esajournals.onlinelibrary.wiley.com/doi/10.1002/ecy.2546">The role of spatial structure in the collapse of regional metapopulations</a>. <em>Ecology. </em></p>
 
