updated PNAS link

--- a/research/index.html
+++ b/research/index.html
@@ -38,7 +38,7 @@ title: Easton R. White | Research
 
 Our goal is to develop tools to make better decisions in highly variable Malagasy fisheries. We take a holistic approach to study the entire socio-ecological system—examining interactions between ecosystem health, poverty, and human health. This project was recently funded by the National Science Foundation Coupled Natural-Human Systems program:</p>
 	
-<p>(CO-PIs) Baker-Medard Merrill, <b>White Easton R.</b>, and Elizabeth Fairchild. Socio-Ecological Feedbacks of Marine Protected Areas: Dynamics of Small-Scale Fishing Communities and Inshore Marine Ecosystems. National Science Foundation CNH2: Dynamics of Integrated Socio-Environmental Systems. $602,320. 2019-2024. </p>	
+<p>(CO-PIs) Baker-Medard Merrill, <b>White Easton R.</b>, and Elizabeth Fairchild. Socio-Ecological Feedbacks of Marine Protected Areas: Dynamics of Small-Scale Fishing Communities and Inshore Marine Ecosystems. <b>National Science Foundation CNH2</b>: Dynamics of Integrated Socio-Environmental Systems. $602,320. 2019-2024. </p>	
 
 <p><a name="monitoring"></a></p>	
 <h2>Improving monitoring for species conservation and management</h2>
@@ -68,10 +68,8 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 From invasive species to fisheries, managers are always trying to determine which management strategies are most effective. However, this is often a difficult challenge. If a particular management strategy fails, was it because it was a bad strategy or because of bad luck? It is difficult to disentangle management effectiveness from luck in the field because we often only have a single observation of the system. 
 
 We have built a series of mathematical models (specifically a set of stochastic discrete-time equations that include stage-structure) to show there can be large variability in management outcomes. We studied this in the context of controlling the spread of an invasive species. We tested these ideas using laboratory experiments with the flour beetle (Tribolium spp.). The experiments matched up with predictions from the mathematical models. Although the laboratory experiments were highly controlled, there was still large variability in management outcomes (see movie of time series below). This highlights the importance of carefully evaluating management successes and failures in nature. We are now building on this work to study how to make invasive species management both effective and also cost effective.
-
-<a href=https://www.doi.org/10.1073/pnas.1911440116><img src=../icons/2019_White_etal_PNAS.png style=height:30px title=journal alt=PDF>
 	
-<strong>White, Easton R.</strong>,*Kyle Cox, Brett Melbourne, and Alan Hastings. In press. <a href=https://www.doi.org/10.1073/pnas.1911440116><Success and failure of ecological management is highly variable in an experimental test>. <em>Proceedings of the National Academy of Sciences</em>.
+<strong>White, Easton R.</strong>,Kyle Cox, Brett Melbourne, and Alan Hastings. In press. <a href="https://www.doi.org/10.1073/pnas.1911440116" target="_blank" rel="noopener noreferrer">Success and failure of ecological management is highly variable in an experimental test</a>. <em>Proceedings of the National Academy of Sciences</em>.
 	
  <figure>
   <img src="/images/BeetleControl_timeseries.gif" alt="min_time" align="bottom" style="width:70%">
