add paragraph link for paper

--- a/research/index.html
+++ b/research/index.html
@@ -69,7 +69,7 @@ From invasive species to fisheries, managers are always trying to determine whic
 
 We have built a series of mathematical models (specifically a set of stochastic discrete-time equations that include stage-structure) to show there can be large variability in management outcomes. We studied this in the context of controlling the spread of an invasive species. We tested these ideas using laboratory experiments with the flour beetle (Tribolium spp.). The experiments matched up with predictions from the mathematical models. Although the laboratory experiments were highly controlled, there was still large variability in management outcomes (see movie of time series below). This highlights the importance of carefully evaluating management successes and failures in nature. We are now building on this work to study how to make invasive species management both effective and also cost effective.
 	
-<strong>White, Easton R.</strong>,Kyle Cox, Brett Melbourne, and Alan Hastings. In press. <a href="https://www.doi.org/10.1073/pnas.1911440116" target="_blank" rel="noopener noreferrer">Success and failure of ecological management is highly variable in an experimental test</a>. <em>Proceedings of the National Academy of Sciences</em>.
+<p><strong>White, Easton R.</strong>, Kyle Cox, Brett Melbourne, and Alan Hastings. In press. <a href="https://www.doi.org/10.1073/pnas.1911440116" target="_blank" rel="noopener noreferrer">Success and failure of ecological management is highly variable in an experimental test</a>. <em>Proceedings of the National Academy of Sciences</em>.</p>
 	
  <figure>
   <img src="/images/BeetleControl_timeseries.gif" alt="min_time" align="bottom" style="width:70%">
