--- a/research/index.html
+++ b/research/index.html
@@ -6,6 +6,7 @@ title: Easton R. White | Research
 <h2>RESEARCH</h2>
 
 <p>Sections</br>
+<a href="#COVID_Fisheries">COVID-19 pandemic and global fisheries</a><br />
 <a href="#MPAs">Marine protected areas in a changing world </a><br />
 <a href="#SES">Socio-ecological systems </a><br />
 <a href="#monitoring">Improving monitoring programs </a><br />
@@ -20,6 +21,16 @@ title: Easton R. White | Research
 <p>I use a variety of quantitative approaches, combined with experiments and field observations, to address questions in ecology and conservation science. Most of this work falls within regions of the venn diagram above. I have current projects focused on socio-ecological systems, environmental variabilty and population dynamics, improving monitoring programs, and designing marine reserve networks. In addition to biology-focused work, I have also conducted <a href="#SoTL">research on pedagogy</a>.</p>
 
 
+<br>
+<p><a name="COVID_Fisheries"></a></p>
+<h2>COVID-19 pandemic and global fisheries</h2>
+<p>Building on my work in both <a href="https://eastonwhite.github.io/covid19/">COVID-19 modeling</a> and marine fisheries, I am now collaborating with several people on how COVID-19 might affect fisheries and fishing communities. The last time we experienced a reduction in fishing effort of this magnitude was during both world wars when oceans were effectively closed to fishing. In response to the COVID-19 pandemic, governments have shut down various parts of their economies to promote social distancing. Already, fishing seasons have been cut short or certain types of fishing (e.g. commercial versus recreational) have been restricted. However, these government actions vary between and within countries (White & Hébert-Dufresne 2020). This presents another natural experiment to see how fish populations and fisheries respond to management interventions. 
+
+Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries. You can contribute and view the database here: https://forms.gle/2MAMx6aGMDrYyLau8</p>
+
+
+
+<br>
 <p><a name="MPAs"></a></p>
 <h2>Marine protected areas in a changing world</h2>
 <p>We are examining the design of marine protected areas given environmental variability. All over the world, networks of marine protected areas have been established as both a conservation and management tool (Gaines et al. 2010). However, most work to date has ignored the role that variability or uncertainty in designing these marine protected areas (but see Halpern et al. 2006). Variability is important as individual protected areas can serve as an insurance policy for one another. If a population in a particular protected area is devastated by a hurricane, then organisms from another, unaffected population can recolonize that protected area. My current work (available as a preprint below) has focused on building simple, theoretical models to include variability in the design of these protected areas.</p>
@@ -27,6 +38,9 @@ title: Easton R. White | Research
 <p><strong>White, Easton R., </strong>Marissa L. Baskett, and Alan Hastings. 2019. <a href="https://www.biorxiv.org/content/10.1101/750448v1">Catastrophes, connectivity, and Allee effects in the design of marine reserve networks</a>. bioRxiv.</p>
 
 
+
+
+<br>
 <p><a name="SES"></a></p>
 <h2>Socio-ecological systems</h2>
 <p>Our work on marine protected areas led to an interdisciplinary collaboration with Drs. <a href="http://www.middlebury.edu/academics/es/faculty/node/480378" target="_blank" rel="noopener noreferrer">Merrill Baker-Medard</a> (social scientist at Middlebury College) and <a href="https://marine.unh.edu/faculty-member/elizabeth-fairchild" target="_blank" rel="noopener noreferrer">Elizabeth Fairchild</a> (fisheries biologist at the University of New Hampshire). 
@@ -40,6 +54,9 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 	
 <p>(CO-PIs) Baker-Medard Merrill, <b>White Easton R.</b>, and Elizabeth Fairchild. Socio-Ecological Feedbacks of Marine Protected Areas: Dynamics of Small-Scale Fishing Communities and Inshore Marine Ecosystems. <b>National Science Foundation CNH2</b>: Dynamics of Integrated Socio-Environmental Systems. $602,320. 2019-2024. </p>	
 
+
+
+<br>
 <p><a name="monitoring"></a></p>	
 <h2>Improving monitoring for species conservation and management</h2>
 <p>Monitoring of populations is a critical aspect of making decisions about the management of species. However, monitoring is often expensive and requires a lot of people-hours. Therefore, it is essential to determine the optimal locations for monitoring, the number of samples to take, and the frequency and duration of monitoring effort.</p>
@@ -62,6 +79,7 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 <p>In a <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">recent preprint</a>, <a href="https://www.kent.edu/biology/christie-bahlai" target="_blank" rel="noopener noreferrer">Dr. Christie Bahlai</a> and I examine the various tools available for thinking about improving species monitoring programs. We emphasize the idea of conducting "experiments" with past monitoring programs in order to improve them and design new ones.</p>  
 	
 	
+<br>
 <p><a name="management_variability"></a></p>
 <h2>Variability in ecological management outcomes</h2>
 
@@ -76,6 +94,9 @@ We have built a series of mathematical models (specifically a set of stochastic 
   <figcaption>Animation of number of beetles in each patch with each frame representing one generation over the course of the experiment. Each subplot is a different combination of dispersal time (hours) and harvesting rate.</figcaption>
 </figure> 
 
+
+
+<br>
 <p><a name="cocos"></a></p>
 <h2>Long-term population trends of sharks and rays</h2>
 <p>Worldwide, many species of sharks and rays have seen large declines in population size. Approximently, 25% of all chondrichthyan (shark, ray, chimaeras) species around the world are threatened according to IUCN criteria (Dulvy 2014). These species are threatened from overfishing, habitat degradation and pollution. Sharks and rays act as predators and drive population dynamics of species lower in the food chain. (Heithaus et al. 2010). In response to declining populations of sharks and rays, many countries have instituted marine protected areas (MPA). An MPA is a conservation and management tool that is designed to let species recover by providing them with an area of refuge, free from fishing. However, it is not clear if MPAs are effective for large mobile predators, like sharks and rays.</p>
@@ -85,10 +106,14 @@ We have built a series of mathematical models (specifically a set of stochastic 
   <img src="/images/Figure4_timeseries_withdrawings.jpg" alt="min_time" align="right" style="width:100%">
 </figure> 
 
+
+<br>
 <h4>Shark nurseries in the Bahamas</h4>
 <p style="text-align:left;">In a related project, I studied long-term trends of lemon sharks found in the Bahamas. We developed a series of mathematical models to better understand the population of juvenile lemon sharks found in the lagoons of <a href="http://www.biminisharklab.com/" target="_blank" rel="noopener noreferrer">Bimini</a>. We found that the variance in population size of juvenile sharks, is mostly driven by the environment. Therefore, predators and food resources may not be as important factors in driving population dynamics as once thought. I combined a mathematical model with field data to better understand a population of lemon sharks in the Bahamas. I found that a simple model could predict the long-term mean of the population size well, but it did a poor job at predicting the variance in population size <a href="https://biologydirect.biomedcentral.com/articles/10.1186/1745-6150-9-23" target="_blank" rel="noopener noreferrer">(White et al. 2014)</a>. It turned out that much of the variance in population size could be explained by a few unusual years in terms of the environment.</p>
 </div>
 
+
+<br>
 
 <p><a name="metapop"></a></p>
 <h2>Metapopulations dynamics of small mammals</h2>
@@ -101,7 +126,7 @@ We have built a series of mathematical models (specifically a set of stochastic 
 <p>I spent a summer at the <a href="http://www.iiasa.ac.at/" target="_blank" rel="noopener noreferrer">International Institute for Applied Systems Analysis</a> in Vienna, Austria. I led a team of biologists and mathematicians to investigate the evolutionary consequences of changing seasonal regimes due to climate change. This work focused on the collared pika (Ochotona collaris) found in the Yukon, Canada. This work is available as a <a href="https://peerj.com/preprints/27435/" target="_blank" rel="noopener noreferrer">preprint (White et al. 2018).</a></p>
 
 
-
+<br>
 <p><a name="SoTL"></a></p>
 <h2>Scholarship of Teaching and Learning</h2>
 <p>In addition to biology-focused work, I have also been engaged in research on pedagogy. This is often termed Scholarship of Teaching and Learning (SoTL) or sometimes Discipline-based education research (DBER). As a scientist, I view teaching as a highly scientific process. I design and implement experiments in the classroom each time I teach. I then examine the results using various assessments (e.g. pre- and post-assessments, clicker questions, online activities) and refine my teaching approach.</p>
