--- a/research/index.html
+++ b/research/index.html
@@ -26,7 +26,7 @@ title: Easton R. White | Research
 <h2>COVID-19 pandemic and global fisheries</h2>
 <p>Building on my work in both <a href="https://eastonwhite.github.io/covid19/">COVID-19 modeling</a> and marine fisheries, I am now collaborating with several people on how COVID-19 might affect fisheries and fishing communities. The last time we experienced a reduction in fishing effort of this magnitude was during both world wars when oceans were effectively closed to fishing. In response to the COVID-19 pandemic, governments have shut down various parts of their economies to promote social distancing. Already, fishing seasons have been cut short or certain types of fishing (e.g. commercial versus recreational) have been restricted. However, these government actions vary between and within countries (White & Hébert-Dufresne 2020). This presents another natural experiment to see how fish populations and fisheries respond to management interventions. 
 
-Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries. You can contribute and view the database here: <a href="https://forms.gle/iUKT9SfsHq99SVx46">https://forms.gle/iUKT9SfsHq99SVx46</a>.</p>
+Our goal is to understand the downstream effects of these shutdowns on fisheries, fish populations, and the communities that rely on them. If you are interested in contributing to this project please send an email to Easton.White@uvm.edu. We have also built a crowd-sourced database of COVID-19 related effects on fisheries. You can contribute and view the database here: <a href="https://forms.gle/iUKT9SfsHq99SVx46" target="_blank">https://forms.gle/iUKT9SfsHq99SVx46</a>.</p>
 
 
 
@@ -74,9 +74,11 @@ Our goal is to develop tools to make better decisions in highly variable Malagas
 <p><a href="http://www2.unb.ca/~sheard/" target="_blank" rel="noopener noreferrer">Dr. Stephen Heard</a> (University of New Brunswick), <a href="http://aurielfournier.github.io/" target="_blank" rel="noopener noreferrer">Dr. Auriel Fournier</a> (Forbes Biological Station), and I recently published an article in <a href="https://conbio.onlinelibrary.wiley.com/doi/full/10.1111/cobi.13371" target="_blank" rel="noopener noreferrer">Conservation Biology that focused on the question of sampling bias in monitoring programs.</a>. We found that bias in the sites chosen for monitoring can lead to overestimates in the long-term population decline estimates.
 
 
-	
-
 <p>In a <a href="https://ecoevorxiv.org/cz5va/" target="_blank" rel="noopener noreferrer">recent preprint</a>, <a href="https://www.kent.edu/biology/christie-bahlai" target="_blank" rel="noopener noreferrer">Dr. Christie Bahlai</a> and I examine the various tools available for thinking about improving species monitoring programs. We emphasize the idea of conducting "experiments" with past monitoring programs in order to improve them and design new ones.</p>  
+
+
+<p><a href="https://www.uvm.edu/rsenr/profiles/rosalie-bruel" target="_blank" rel="noopener noreferrer">Dr. Rosalie Bruel</a> and I applied these techniques to study the optimal sampling requirements and approaches for detecting ecosystem change in plankton communities derived from sediment cores. This work is now available in a <a href="https://www.biorxiv.org/content/10.1101/2020.04.07.030643v1" target="_blank" rel="noopener noreferrer">recent preprint</a>.
+
 	
 	
 <br>
